The breadcrumb was added

--- a/projects/truequelibre-ui/src/lib/alert/alert.component.css
+++ b/projects/truequelibre-ui/src/lib/alert/alert.component.css
@@ -5,6 +5,10 @@
   --danger: #e6540b;
 }
 
+.alert {
+  font-family: 'Proxima nova', 'Roboto', sans-serif;
+}
+
 .alert-primary {
   background: var(--primary);
   color: white;
