--- a/projects/visual-inspector/src/app/app.component.html
+++ b/projects/visual-inspector/src/app/app.component.html
@@ -1,6 +1,10 @@
 <div class="container">
-  <truequelibre-alert color="primary" destroyable="true"></truequelibre-alert>
-  <truequelibre-alert color="success" durationTime="1000"></truequelibre-alert>
-  <truequelibre-alert color="warning"></truequelibre-alert>
-  <truequelibre-alert color="danger"></truequelibre-alert>
+  <truequelibre-alert color="success"></truequelibre-alert>
+  <truequelibre-breadcrumb
+    [categories]="[{categoryName: 'Components', categoryUrl: ''},
+                   {categoryName: 'SSDs',  categoryUrl: ''},
+                   {categoryName: 'Internal SSDs',  categoryUrl: ''},
+                   {categoryName: 'Crucial',  categoryUrl:''}]">
+  </truequelibre-breadcrumb>
+
 </div>
