the button component was added to the library

--- a/projects/visual-inspector/src/app/app.component.html
+++ b/projects/visual-inspector/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div class="container">
-  <truequelibre-alert color="success"></truequelibre-alert>
+  <truequelibre-alert color="primary"></truequelibre-alert>
+
   <truequelibre-breadcrumb
     [categories]="[{categoryName: 'Components', categoryUrl: ''},
                    {categoryName: 'SSDs',  categoryUrl: ''},
@@ -7,4 +8,9 @@
                    {categoryName: 'Crucial',  categoryUrl:''}]">
   </truequelibre-breadcrumb>
 
+  <truequelibre-link-button color="primary"
+                            size="md"
+                            outline="false"
+                            text="Preguntar">
+  </truequelibre-link-button>
 </div>
