the item card (basic card) component was added

--- a/projects/visual-inspector/src/app/app.component.html
+++ b/projects/visual-inspector/src/app/app.component.html
@@ -13,4 +13,13 @@
                             outline="false"
                             text="Preguntar">
   </truequelibre-link-button>
+  &nbsp;
+  <truequelibre-link-button color="success"
+                            size="md"
+                            outline="false"
+                            text="Comprar">
+  </truequelibre-link-button>
+  <hr>
+
+  <truequelibre-item-card picture="https://http2.mlstatic.com/D_Q_NP_642540-MCO31080975145_062019-AB.webp"></truequelibre-item-card>
 </div>
