the client card (advanced card) component was added

--- a/projects/visual-inspector/src/app/app.component.html
+++ b/projects/visual-inspector/src/app/app.component.html
@@ -7,19 +7,69 @@
                    {categoryName: 'Internal SSDs',  categoryUrl: ''},
                    {categoryName: 'Crucial',  categoryUrl:''}]">
   </truequelibre-breadcrumb>
-
-  <truequelibre-link-button color="primary"
-                            size="md"
-                            outline="false"
-                            text="Preguntar">
-  </truequelibre-link-button>
-  &nbsp;
-  <truequelibre-link-button color="success"
-                            size="md"
-                            outline="false"
-                            text="Comprar">
-  </truequelibre-link-button>
-  <hr>
-
-  <truequelibre-item-card picture="https://http2.mlstatic.com/D_Q_NP_642540-MCO31080975145_062019-AB.webp"></truequelibre-item-card>
+  <div>
+    <truequelibre-link-button color="primary"
+                              size="sm"
+                              [outline]="false"
+                              text="Mirar">
+    </truequelibre-link-button>
+    &nbsp;
+    <truequelibre-link-button color="primary"
+                              size="md"
+                              [outline]="false"
+                              text="Comprar">
+    </truequelibre-link-button>
+    &nbsp;
+    <truequelibre-link-button color="primary"
+                              size="lg"
+                              [outline]="false"
+                              text="Preguntar">
+    </truequelibre-link-button>
+  </div>
+  <br>
+  <div class="container" style="display: flex; padding: 0; height: 370px">
+    <truequelibre-item-card
+      picture="https://http2.mlstatic.com/D_Q_NP_642540-MCO31080975145_062019-AB.webp">
+    </truequelibre-item-card>
+    <truequelibre-item-card
+      picture="https://http2.mlstatic.com/D_Q_NP_642540-MCO31080975145_062019-AB.webp">
+    </truequelibre-item-card>
+    <truequelibre-item-card
+      picture="https://http2.mlstatic.com/D_Q_NP_642540-MCO31080975145_062019-AB.webp">
+    </truequelibre-item-card>
+  </div>
+  <br>
+  <div class="container" style="display: flex; padding: 0">
+    <truequelibre-client-card
+      bannerPicture="https://http2.mlstatic.com/optimize/o:f_webp/resources/largesellers/251565057/gopro/background_home202002100447.jpg"
+      clientPicture="https://http2.mlstatic.com/D_Q_NP_777111-MLA25716447028_062017-AE.webp"
+      clientName="GoPro"
+      [products]="[
+        {URL: '', picture: 'https://http2.mlstatic.com/D_Q_NP_737434-MCO31111323173_062019-R.webp'},
+        {URL: '', picture: 'https://http2.mlstatic.com/D_Q_NP_850084-MCO32736666249_112019-R.webp'},
+        {URL: '', picture: 'https://http2.mlstatic.com/D_Q_NP_930865-MCO40737547823_022020-R.webp'}
+      ]">
+    </truequelibre-client-card>
+    <truequelibre-client-card
+      bannerPicture="https://http2.mlstatic.com/optimize/o:f_webp/resources/largesellers/251565057/gopro/background_home202002100447.jpg"
+      clientPicture="https://http2.mlstatic.com/D_Q_NP_777111-MLA25716447028_062017-AE.webp"
+      clientName="GoPro"
+      [products]="[
+        {URL: '', picture: 'https://http2.mlstatic.com/D_Q_NP_737434-MCO31111323173_062019-R.webp'},
+        {URL: '', picture: 'https://http2.mlstatic.com/D_Q_NP_850084-MCO32736666249_112019-R.webp'},
+        {URL: '', picture: 'https://http2.mlstatic.com/D_Q_NP_930865-MCO40737547823_022020-R.webp'}
+      ]">
+    </truequelibre-client-card>
+    <truequelibre-client-card
+      bannerPicture="https://http2.mlstatic.com/optimize/o:f_webp/resources/largesellers/251565057/gopro/background_home202002100447.jpg"
+      clientPicture="https://http2.mlstatic.com/D_Q_NP_777111-MLA25716447028_062017-AE.webp"
+      clientName="GoPro"
+      [products]="[
+        {URL: '', picture: 'https://http2.mlstatic.com/D_Q_NP_737434-MCO31111323173_062019-R.webp'},
+        {URL: '', picture: 'https://http2.mlstatic.com/D_Q_NP_850084-MCO32736666249_112019-R.webp'},
+        {URL: '', picture: 'https://http2.mlstatic.com/D_Q_NP_930865-MCO40737547823_022020-R.webp'}
+      ]">
+    </truequelibre-client-card>
+  </div>
+  <br>
 </div>
