--- a/projects/visual-inspector/src/app/app.component.html
+++ b/projects/visual-inspector/src/app/app.component.html
@@ -35,7 +35,8 @@
       picture="https://http2.mlstatic.com/D_Q_NP_642540-MCO31080975145_062019-AB.webp">
     </truequelibre-item-card>
     <truequelibre-item-card
-      picture="https://http2.mlstatic.com/D_Q_NP_642540-MCO31080975145_062019-AB.webp">
+      picture="https://http2.mlstatic.com/D_Q_NP_642540-MCO31080975145_062019-AB.webp"
+      [freeShipping]="false">
     </truequelibre-item-card>
   </div>
   <br>
@@ -70,6 +71,18 @@
         {URL: '', picture: 'https://http2.mlstatic.com/D_Q_NP_930865-MCO40737547823_022020-R.webp'}
       ]">
     </truequelibre-client-card>
+  </div>
+  <br>
+  <div class="container" style="display: flex; padding: 0">
+    <truequelibre-product-page-card
+      picture="https://http2.mlstatic.com/D_Q_NP_642540-MCO31080975145_062019-AB.webp"
+      [freeShipping]="true">
+    </truequelibre-product-page-card>
+    <truequelibre-product-page-card
+      picture="https://http2.mlstatic.com/D_Q_NP_642540-MCO31080975145_062019-AB.webp"
+      [freeShipping]="true"
+      [small]="false">
+    </truequelibre-product-page-card>
   </div>
   <br>
 </div>
