--- a/projects/visual-inspector/src/styles.css
+++ b/projects/visual-inspector/src/styles.css
@@ -38,3 +38,7 @@ body {
 * > truequelibre-client-card:first-child > .card {
   margin-left: 0 !important;
 }
+
+* > truequelibre-product-page-card:first-child > .card {
+  margin-left: 0 !important;
+}
