half carousel component was added

--- a/projects/visual-inspector/src/app/app.component.html
+++ b/projects/visual-inspector/src/app/app.component.html
@@ -80,9 +80,11 @@
     </truequelibre-product-page-card>
     <truequelibre-product-page-card
       picture="https://http2.mlstatic.com/D_Q_NP_642540-MCO31080975145_062019-AB.webp"
-      [freeShipping]="true"
-      [small]="false">
+      [freeShipping]="true">
     </truequelibre-product-page-card>
   </div>
+  <br>
+
+    <truequelibre-main-carousel></truequelibre-main-carousel>
   <br>
 </div>
