Added the carousel component

--- a/projects/visual-inspector/src/app/app.component.html
+++ b/projects/visual-inspector/src/app/app.component.html
@@ -85,6 +85,10 @@
   </div>
   <br>
 
-    <truequelibre-main-carousel></truequelibre-main-carousel>
+    <truequelibre-main-carousel
+      firstPicture="https://http2.mlstatic.com/optimize/o:f_webp/resources/deals/exhibitors_resources/mco-home-desktop-slider-picture-95ac2716-6294-4353-b94f-49d76eb3c297.jpg"
+      secondPicture="https://http2.mlstatic.com/optimize/o:f_webp/resources/deals/exhibitors_resources/mco-home-desktop-slider-picture-b7086d28-59bc-4ff6-a8c6-4d755b650371.jpg"
+      thirdPicture="https://http2.mlstatic.com/optimize/o:f_webp/resources/deals/exhibitors_resources/mco-home-desktop-slider-picture-1a006843-b390-4795-8b83-09352456057f.jpg">
+    </truequelibre-main-carousel>
   <br>
 </div>
