--- a/projects/truequelibre-ui/src/lib/main.carousel/main.carousel.component.html
+++ b/projects/truequelibre-ui/src/lib/main.carousel/main.carousel.component.html
@@ -1,23 +1,27 @@
-<div class="container">
-  <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="https://http2.mlstatic.com/optimize/o:f_webp/resources/deals/exhibitors_resources/mco-home-desktop-slider-picture-97b7be4a-6e16-449c-b9e1-70fa7141de73.jpg" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="https://http2.mlstatic.com/optimize/o:f_webp/resources/deals/exhibitors_resources/mco-home-desktop-slider-picture-b7086d28-59bc-4ff6-a8c6-4d755b650371.jpg" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="https://http2.mlstatic.com/optimize/o:f_webp/resources/deals/exhibitors_resources/mco-home-desktop-slider-picture-684c0fb6-7efc-4498-93ed-f9c70d42669f.jpg" class="d-block w-100" alt="...">
-    </div>
+<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+<div class="carousel-inner">
+  <div class="carousel-item active">
+    <a href="#">
+      <img [src]="firstPicture" class="d-block w-100">
+    </a>
   </div>
-  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
+  <div class="carousel-item">
+    <a href="#">
+      <img [src]="secondPicture" class="d-block w-100">
+    </a>
+  </div>
+  <div class="carousel-item">
+    <a href="#">
+      <img [src]="thirdPicture" class="d-block w-100">
+    </a>
+  </div>
 </div>
+<a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+  <span class="sr-only">Previous</span>
+</a>
+<a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+  <span class="sr-only">Next</span>
+</a>
 </div>
