the product carousel was added

--- a/projects/truequelibre-ui/src/lib/client.card/client.card.component.html
+++ b/projects/truequelibre-ui/src/lib/client.card/client.card.component.html
@@ -1,4 +1,4 @@
-<a [routerLink]="storeURL" class="card" style="width: 18rem;">
+<a [routerLink]="storeURL" class="card" style="width: 280px;">
   <img [src]="bannerPicture" class="card-img-top" [alt]="clientName">
   <div class="card-body">
     <img class="card-img-client" [src]="clientPicture" [alt]="clientName">
