--- a/projects/visual-inspector/src/app/app.component.html
+++ b/projects/visual-inspector/src/app/app.component.html
@@ -27,7 +27,28 @@
     </truequelibre-link-button>
   </div>
   <br>
-  <div class="container" style="display: flex; padding: 0; height: 370px">
+  <div class="container" style="display: flex; padding: 0">
+    <truequelibre-product-page-card
+      picture="https://http2.mlstatic.com/D_Q_NP_642540-MCO31080975145_062019-AB.webp">
+    </truequelibre-product-page-card>
+    <truequelibre-product-page-card
+      picture="https://http2.mlstatic.com/D_Q_NP_642540-MCO31080975145_062019-AB.webp">
+    </truequelibre-product-page-card>
+    <truequelibre-product-page-card
+      picture="https://http2.mlstatic.com/D_Q_NP_642540-MCO31080975145_062019-AB.webp">
+    </truequelibre-product-page-card>
+    <truequelibre-product-page-card
+      picture="https://http2.mlstatic.com/D_Q_NP_642540-MCO31080975145_062019-AB.webp">
+    </truequelibre-product-page-card>
+    <truequelibre-product-page-card
+      picture="https://http2.mlstatic.com/D_Q_NP_642540-MCO31080975145_062019-AB.webp">
+    </truequelibre-product-page-card>
+    <truequelibre-product-page-card
+      picture="https://http2.mlstatic.com/D_Q_NP_642540-MCO31080975145_062019-AB.webp">
+    </truequelibre-product-page-card>
+  </div>
+  <br>
+  <div class="container" style="display: flex; padding: 0; height: 340px">
     <truequelibre-item-card
       picture="https://http2.mlstatic.com/D_Q_NP_642540-MCO31080975145_062019-AB.webp">
     </truequelibre-item-card>
@@ -38,8 +59,15 @@
       picture="https://http2.mlstatic.com/D_Q_NP_642540-MCO31080975145_062019-AB.webp"
       [freeShipping]="false">
     </truequelibre-item-card>
+    <truequelibre-item-card
+      picture="https://http2.mlstatic.com/D_Q_NP_642540-MCO31080975145_062019-AB.webp"
+      [freeShipping]="false">
+    </truequelibre-item-card>
+    <truequelibre-item-card
+      picture="https://http2.mlstatic.com/D_Q_NP_642540-MCO31080975145_062019-AB.webp"
+      [freeShipping]="false">
+    </truequelibre-item-card>
   </div>
-  <br>
   <div class="container" style="display: flex; padding: 0">
     <truequelibre-client-card
       bannerPicture="https://http2.mlstatic.com/optimize/o:f_webp/resources/largesellers/251565057/gopro/background_home202002100447.jpg"
@@ -71,24 +99,26 @@
         {URL: '', picture: 'https://http2.mlstatic.com/D_Q_NP_930865-MCO40737547823_022020-R.webp'}
       ]">
     </truequelibre-client-card>
+    <truequelibre-client-card
+      bannerPicture="https://http2.mlstatic.com/optimize/o:f_webp/resources/largesellers/251565057/gopro/background_home202002100447.jpg"
+      clientPicture="https://http2.mlstatic.com/D_Q_NP_777111-MLA25716447028_062017-AE.webp"
+      clientName="GoPro"
+      [products]="[
+        {URL: '', picture: 'https://http2.mlstatic.com/D_Q_NP_737434-MCO31111323173_062019-R.webp'},
+        {URL: '', picture: 'https://http2.mlstatic.com/D_Q_NP_850084-MCO32736666249_112019-R.webp'},
+        {URL: '', picture: 'https://http2.mlstatic.com/D_Q_NP_930865-MCO40737547823_022020-R.webp'}
+      ]">
+    </truequelibre-client-card>
   </div>
   <br>
-  <div class="container" style="display: flex; padding: 0">
-    <truequelibre-product-page-card
-      picture="https://http2.mlstatic.com/D_Q_NP_642540-MCO31080975145_062019-AB.webp"
-      [freeShipping]="true">
-    </truequelibre-product-page-card>
-    <truequelibre-product-page-card
-      picture="https://http2.mlstatic.com/D_Q_NP_642540-MCO31080975145_062019-AB.webp"
-      [freeShipping]="true">
-    </truequelibre-product-page-card>
+  <truequelibre-main-carousel
+    firstPicture="https://http2.mlstatic.com/optimize/o:f_webp/resources/deals/exhibitors_resources/mco-home-desktop-slider-picture-95ac2716-6294-4353-b94f-49d76eb3c297.jpg"
+    secondPicture="https://http2.mlstatic.com/optimize/o:f_webp/resources/deals/exhibitors_resources/mco-home-desktop-slider-picture-b7086d28-59bc-4ff6-a8c6-4d755b650371.jpg"
+    thirdPicture="https://http2.mlstatic.com/optimize/o:f_webp/resources/deals/exhibitors_resources/mco-home-desktop-slider-picture-1a006843-b390-4795-8b83-09352456057f.jpg">
+  </truequelibre-main-carousel>
+  <br>
+  <div class="container">
+    <truequelibre-product-carousel>
+    </truequelibre-product-carousel>
   </div>
-  <br>
-
-    <truequelibre-main-carousel
-      firstPicture="https://http2.mlstatic.com/optimize/o:f_webp/resources/deals/exhibitors_resources/mco-home-desktop-slider-picture-95ac2716-6294-4353-b94f-49d76eb3c297.jpg"
-      secondPicture="https://http2.mlstatic.com/optimize/o:f_webp/resources/deals/exhibitors_resources/mco-home-desktop-slider-picture-b7086d28-59bc-4ff6-a8c6-4d755b650371.jpg"
-      thirdPicture="https://http2.mlstatic.com/optimize/o:f_webp/resources/deals/exhibitors_resources/mco-home-desktop-slider-picture-1a006843-b390-4795-8b83-09352456057f.jpg">
-    </truequelibre-main-carousel>
-  <br>
 </div>
