--- a/projects/truequelibre-ui/src/lib/main.carousel/main.carousel.component.css
+++ b/projects/truequelibre-ui/src/lib/main.carousel/main.carousel.component.css
@@ -2,7 +2,6 @@
   position: absolute;
   left: 0;
   width: 100%;
-  max-width: 1367px;
 }
 
 .carousel-item > a > img {
@@ -44,4 +43,8 @@
 
 .carousel-control-next-icon {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%233483fa' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath d='M2.75 0l-1.5 1.5L3.75 4l-2.5 2.5L2.75 8l4-4-4-4z'/%3e%3c/svg%3e");
+}
+
+.carousel-fixer {
+  margin-bottom: 340px;
 }
