--- a/projects/truequelibre-ui/src/lib/product.page.card/product.page.card.component.css
+++ b/projects/truequelibre-ui/src/lib/product.page.card/product.page.card.component.css
@@ -13,6 +13,7 @@ h4 {
 .card {
   box-shadow: 0 1px 1px 0 rgba(0,0,0,.1);
   margin-left: 10px;
+  width: 184.5px;
 }
 
 .card:hover {
@@ -20,9 +21,13 @@ h4 {
   border: none;
 }
 
+.card > .card-body {
+  padding: 1rem;
+}
+
 .card > .card-body > p {
   height: 30px;
-  font-size: 13.5px;
+  font-size: 12.5px;
   color: #909090;
 }
 
