--- a/projects/truequelibre-ui/src/lib/product.page.card/product.page.card.component.html
+++ b/projects/truequelibre-ui/src/lib/product.page.card/product.page.card.component.html
@@ -1,4 +1,4 @@
-<a [routerLink]="URL" class="card" [style]="{width: small ? '200px': '224px'}">
+<a [routerLink]="URL" class="card">
   <img [src]="picture" class="card-img-top" [alt]="title">
   <div class="card-body">
     <h4 class="card-title">{{price}}</h4>
