--- a/projects/visual-inspector/src/styles.css
+++ b/projects/visual-inspector/src/styles.css
@@ -43,7 +43,9 @@ body {
   margin-left: 0 !important;
 }
 
-truequelibre-main-carousel:parent {
-  padding: 0 !important;
-  margin: 0 !important;
+
+@media (min-width: 1200px){
+  .container, .container-sm, .container-md, .container-lg, .container-xl {
+    max-width: 1200px !important;
+  }
 }
